Style: Fix overflow

--- a/output.css
+++ b/output.css
@@ -688,9 +688,6 @@ video {
 .text-\[2\.5rem\] {
   font-size: 2.5rem;
 }
-.text-\[3rem\] {
-  font-size: 3rem;
-}
 .font-bold {
   font-weight: 700;
 }
